# discrete-math-hw5

./: CMakeLists.txt  README.md
src/: full_code.cpp  task_b.cpp  task_c.cpp  task_e.cpp  task_f.cpp  task_g.cpp  task_h.cpp  task_j.cpp  task_k.cpp  task_l.cpp  task_m.cpp  task_n.cpp  task_o.cpp  template.cpp
